--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -75,6 +75,16 @@
       background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
         url("../img/piknikprostorlocice.jpg");
     }
+
+    .izlaboats-slika {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        url("../img/izlaboats.jpg");
+    }
+
+    .creativeula-slika {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        url("../img/creativeula.jpg");
+    }
   }
 
   /* OPISI PROJEKTOV */
