--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -5,7 +5,7 @@
   display: grid;
   height: 100vh;
   align-content: stretch;
-  grid-template-columns: 9rem 2.2fr 1fr 1fr 5%;
+  grid-template-columns: 9rem 60% 1fr 1fr 3%;
   grid-template-rows: 68px 1fr 1fr 25%;
 
   h2 {
@@ -20,7 +20,7 @@
     grid-column: 2/3;
     align-self: start;
     justify-self: start;
-    padding: 0 7rem 0 7rem;
+    padding: 0 4rem 0 7rem;
   }
 
   .pike {
@@ -91,6 +91,7 @@
   .onas__card__jure {
     grid-row: 2;
     grid-column: 3;
+    padding-right: 0.8rem;
   }
   /* Pozicija kartice za Gregorja*/
   .onas__card__gregor {
@@ -157,7 +158,7 @@
     text-align: center;
 
     &__besedilo {
-      padding: 2rem 2rem 0 2rem;
+      padding: 2rem 0 0 0;
       width: 100%;
       display: table-cell;
       vertical-align: top;
