--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -5,7 +5,7 @@
   display: grid;
   height: 100vh;
   align-content: stretch;
-  grid-template-columns: 9rem 60% 1fr 1fr 3%;
+  grid-template-columns: 9rem 60vw 15vw 15vw 3%;
   grid-template-rows: 68px 1fr 1fr 25%;
 
   h2 {
@@ -44,7 +44,7 @@
   }
 
   .tehnologije{
-    grid-row: 4/5;
+    grid-row: 3/5;
     grid-column: 2/3;
     
 
@@ -53,18 +53,19 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 0.5rem;
+      
       list-style: none;
-      padding: 5rem;
-      margin-right: 5rem;
+      margin-top: 20rem;
+      margin-right: 2rem;
+      margin-left:2rem;
       
       li{
         display: block;
         margin-right: 4rem;
 
         svg{
-          height: 6rem;
-          width:6rem;
+          height: 4vw;
+          width:4vw;
           fill: #eeffff;
         }
 
@@ -110,8 +111,8 @@
       grid-row: 1;
       justify-self: center;
       align-self: flex-end;
-      width: 20rem;
-      height: 20rem;
+      width: 14vw;
+      height: 14vw;
       border-radius: 50%;
       
 
@@ -158,7 +159,7 @@
     text-align: center;
 
     &__besedilo {
-      padding: 2rem 0 0 0;
+      padding: 2rem 0.4rem 0 0.4rem;
       width: 100%;
       display: table-cell;
       vertical-align: top;
@@ -241,6 +242,7 @@
     }
 
     .tehnologije{
+      grid-row: 4/5;
       grid-column-start: 2;
       grid-column-end: 4;
       align-self: center;
@@ -248,6 +250,7 @@
 
       ul{
         margin-right: 0;
+        margin-top: 0rem;
       }
     }
   
