--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -92,6 +92,7 @@
     grid-row: 3 / 3;
     grid-column: 2/2;
     padding: 4rem 4rem 4rem 4rem;
+    margin-top: -4rem;
   }
   .opisi-projektov {
     padding-top: 50vh;
