two new project and one updated

--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -85,6 +85,19 @@
       background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
         url("../img/creativeula.jpg");
     }
+
+    .notranjskahisa-slika {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        url("../img/notranjskahisa.jpg");
+    }
+
+    .nezaillustrations-slika {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        url("../img/nezaillustrations.jpg");
+    }
+
+
+    
   }
 
   /* OPISI PROJEKTOV */
