--- a/styles/style.css
+++ b/styles/style.css
@@ -1215,6 +1215,16 @@ header .menu-btn.open .menu-btn__burger::after {
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../img/creativeula.jpg");
 }
 
+.pro .projekt-slika-section .notranjskahisa-slika {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url("../img/notranjskahisa.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../img/notranjskahisa.jpg");
+}
+
+.pro .projekt-slika-section .nezaillustrations-slika {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url("../img/nezaillustrations.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../img/nezaillustrations.jpg");
+}
+
 .pro .opisi-projektov.prvi-projekt {
   -ms-grid-row: 3;
   grid-row: 3 / 3;
